Cleaning up some wording and layout issues in FP

--- a/app/scripts/modules/netflix/canary/canary.less
+++ b/app/scripts/modules/netflix/canary/canary.less
@@ -1,6 +1,6 @@
 
 .canary-container {
-  padding: 10px;
+  padding-bottom: 10px;
   display: flex;
   flex-direction: row;
 }
